--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,332 @@
 body {
-    text-align: center;
+  background: linear-gradient(to top, rgba(237,172,84,1), rgba(240,205,157,1));
+  margin: auto;
+}
+
+.settings {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1;
+
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+}
+
+.settings-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  border: 20px solid #6A4006;
+  background-color: #B76D0A;
+  box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.5), inset 0px 0px 10px 3px rgba(0, 0, 0, 0.8);
+  font-family: 'Poor Story', cursive;
+
+  height: 700px;
+  width: 50%;
+  min-width: 700px;
+  margin: auto;
+}
+
+.settings-header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+
+  text-align: center;
+  color: #F0CD9D;
+
+  font-size: 2em;
+  height: 15%;
+}
+
+.settings-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-evenly;
+
+  font-variant: small-caps;
+
+  height: 65%;
+  width: 80%;
+}
+
+.settings-diff {
+  display: inherit;
+  flex-direction: inherit;
+  align-items: center;
+  justify-content: center;
+
+  height: 45%;
+  width: 100%;
+}
+
+.settings-char {
+  display: inherit;
+  flex-direction: inherit;
+  align-items: center;
+  justify-content: center;
+
+  height: 50%;
+  width: 100%;
+}
+
+.settings-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+
+  height: 20%;
+  width: 40%;
+}
+
+.submit {
+  background-color: #EDAC54;
+  border: 5px solid #6A4006;
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.3);
+
+  color: #6A4006;
+  font-size: 3em;
+  font-family: 'Poor Story', cursive;
+
+  height: 60%;
+  width: 100%;
+}
+
+.submit:hover {
+  cursor: pointer;
+}
+
+.settings-text {
+  display: inherit;
+  flex-direction: inherit;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #EDAC54;
+  border: 5px solid #6A4006;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.3);
+
+  font-size: 1.5em;
+  color: #6A4006;
+
+  width: 80%;
+  max-height: 25%;
+  margin-bottom: -7px;
+}
+
+.difficulty, .characters {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  justify-content: center;
+  justify-content: space-evenly;
+  border: 5px solid #6A4006;
+  background-color: #EDAC54;
+
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.3);
+  list-style: none;
+
+  width: 100%;
+  margin: 0;
+  padding: 10px;
+}
+
+.divider {
+  background: linear-gradient(to right, rgba(240,205,157,0.2), rgba(240,205,157,1), rgba(240,205,157,0.2));
+
+  width: 90%;
+  height: 2px;
+  margin-top: 5px;
+}
+
+.char-icon, .select-char {
+  display: inherit;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.select-char, .select-diff {
+  background-color: red;
+}
+
+.char-icon:hover {
+  cursor: pointer;
+}
+
+.diff-icon, .select-diff {
+  font-size: 1.75em;
+  text-align: center;
+
+  width: 30%;
+}
+
+.diff-icon:hover {
+  cursor: pointer;
+}
+
+.game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+}
+
+.game-header {
+  display: inherit;
+  flex-direction: inherit;
+  align-items: center;
+
+  font-family: 'Poor Story', cursive;
+  border: 5px solid #6A4006;
+  background-color: #EDAC54;
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.3);
+  color: #6A4006;
+
+  width: 60%;
+  height: 100px;
+  margin: 0 0 10px 0;
+}
+
+.game-header h1 {
+  font-size: 5em;
+  font-variant: small-caps;
+}
+
+.game-header h2 {
+  font-size: 2em;
+  font-variant: small-caps;
+
+  margin-top: -5px;
+  margin-bottom: -100px;
+}
+
+.game-stats {
+  display: inherit;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+
+  font-family: 'Poor Story', cursive;
+  border: 5px solid #6A4006;
+  background-color: #EDAC54;
+
+  color: #6A4006;
+  font-size: 2em;
+  font-variant: small-caps;
+  list-style: none;
+
+  width: 460px;
+  height: 50px;
+  padding-right: 50px;
+  margin-bottom: -7px;
+}
+
+.canvas {
+  display: inherit;
+  flex-direction: inherit;
+  align-items: center;
+  justify-content: center;
+
+  border: 5px solid #6A4006;
+  background-color: #F2F2F2;
+
+  box-shadow: inset 0px 0px 10px 3px rgba(0, 0, 0, 0.7);
+
+  height: 550px;
+  width: 550px;
+
+  padding-bottom: 30px;
+}
+
+.end-modal {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1;
+
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+
+  margin: 0 auto;
+}
+
+.end-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-evenly;
+
+  border: 20px solid #6A4006;
+  background-color: #B76D0A;
+  box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.5), inset 0px 0px 10px 3px rgba(0, 0, 0, 0.8);
+  font-family: 'Poor Story', cursive;
+
+  height: 400px;
+  width: 40%;
+  min-width: 500px;
+}
+
+.end-text {
+  display: inherit;
+  flex-direction: inherit;
+  align-items: center;
+  justify-content: center;
+
+  color: #F0CD9D;
+
+  width: 90%;
+  height: 55%;
+}
+
+.end-text h1 {
+  font-size: 3.5em;
+}
+
+.end-text h3 {
+  font-size: 1.8em;
+  text-align: center;
+}
+
+.buttons {
+  display: inherit;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-evenly;
+
+  width: 95%;
+  height: 30%;
+}
+
+.end-button {
+  background-color: #EDAC54;
+  border: 5px solid #6A4006;
+  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.3);
+
+  color: #6A4006;
+  font-size: 1.8em;
+  font-family: 'Poor Story', cursive;
+
+  height: 80%;
+  width: 45%;
+}
+
+.end-button:hover {
+  cursor: pointer;
 }
